# gitopsy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  gitopsy.md  pyproject.toml
.claude/skills/gitopsy/: SKILL.md
.github/workflows/: self-analysis.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/04-css-foundation-token-system/: 04-01-SUMMARY.md
.planning/phases/05-theme-toggle-chart-js-visual-polish/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
docs/examples/: gitopsy-report-fastapi.html  gitopsy-report-flask.html  gitopsy-self-report.html
gitopsy/: __init__.py  __main__.py  cli.py  orchestrator.py
gitopsy/analyzers/: __init__.py  api_extractor.py  architecture.py  conventions.py  dependencies.py  onboarding.py  security_surface.py  setup_guide.py  tech_debt.py
gitopsy/models/: __init__.py  schemas.py
gitopsy/report/: __init__.py  badge.py  charts.py  diff.py  renderer.py  template.html
gitopsy/scanners/: __init__.py  file_tree.py  git_history.py  language_detect.py  pattern_match.py
tests/: conftest.py  test_api_extractor.py  test_architecture.py  test_badge.py  test_conventions.py  test_dependencies.py  test_diff.py  test_file_tree.py  test_git_history.py  test_integration.py  test_language_detect.py  test_onboarding.py  test_pattern_match.py  test_security.py  test_setup_guide.py  test_tech_debt.py
tests/fixtures/flask-app/: .env.example  README.md  app.py  requirements.txt
tests/fixtures/nextjs-app/: README.md  package.json
tests/fixtures/python-cli/: .gitignore  README.md  cli.py  (+1 more)
(+4 files in other folders)
